// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/app/reducers/locations should handle a createPlantRequest for a missing plant at location 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a createPlantRequest for an existing plant at location 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
      "plant-1",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a createPlantRequest when location does not have plantIds 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
    "plantIds": Array [
      "plant-1",
    ],
  },
}
`;

exports[`/app/reducers/locations should handle a deletePlantRequest 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a deletePlantRequest when locationId is missing 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a loadPlantsSuccess for an array of plants 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
      "plant-1",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a loadPlantsSuccess for an empty array of plants 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should load locations 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "two",
      "twenty",
    ],
    "title": "twenty-two",
  },
  "3": Object {
    "_id": "3",
    "plantIds": Array [
      "three",
      "thirty",
    ],
    "title": "thirty-three",
  },
  "4": Object {
    "_id": "4",
    "plantIds": Array [],
    "title": "four",
  },
}
`;

exports[`/app/reducers/locations should load locations with undefined payload 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "plantIds": Array [
      "xxx",
    ],
    "title": "xxx",
  },
  "3": Object {
    "_id": "3",
  },
}
`;
